--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@vercel/postgres": "^0.9.0",
-    "clsx": "^2.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "dotenv-cli": "^7.4.2",
     "lucide-react": "^0.376.0",
     "next": "^14.0.4",
@@ -29,7 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
