--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.6",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/postgres": "^0.9.0",
@@ -31,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "svix": "^1.31.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
