--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "svix": "^1.31.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uvcanvas": "^0.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
