chore: fix bug in route.ts

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "dotenv -e .env.local pnpm next dev",
     "migrate:dev": "dotenv -e .env.local prisma migrate dev",
+    "prisma:generate": "prisma generate",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
     "lint:strict": "eslint --max-warnings=0 src",
-    "typecheck": "tsc --noEmit --incremental false",
+    "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
     "test:watch": "jest --watch",
     "test": "jest",
     "format": "prettier -w .",
