--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@clerk/nextjs": "^5.3.6",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -36,6 +37,7 @@
     "svix": "^1.31.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.13.2",
     "uvcanvas": "^0.2.1",
     "zod": "^3.22.4"
   },
