--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.3.6",
     "@prisma/client": "^5.19.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.9.0",
@@ -33,6 +36,7 @@
     "prisma": "^5.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
     "svix": "^1.31.0",
     "tailwind-merge": "^2.3.0",
@@ -67,7 +71,7 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.5.0",
     "tailwindcss": "^3.3.6",
-    "typescript": "^4.9.5"
+    "typescript": "^5.5.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
