--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.7",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -43,7 +44,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "uvcanvas": "^0.2.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-prisma-types": "^3.1.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
@@ -68,7 +70,7 @@
     "next-router-mock": "^0.9.13",
     "next-sitemap": "^2.5.28",
     "postcss": "^8.4.41",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
