--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env.local pnpm next dev",
+    "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold\" npm:dev:*",
+    "dev:next": "next dev",
+    "dev:prisma": "prisma generate --watch",
     "migrate:dev": "dotenv -e .env.local prisma migrate dev",
-    "prisma:generate": "prisma generate",
+    "prisma:generate": "prisma generate && prettier --write src/lib/prisma/generated/zod/index.ts",
+    "prisma:watch": "prisma generate --watch",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
@@ -59,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.7",
     "eslint-config-prettier": "^8.10.0",
@@ -77,11 +81,18 @@
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
+      "pnpm prisma:generate",
       "eslint --max-warnings=0",
       "prettier -w"
     ],
     "**/*.{json,css,scss,md,webmanifest}": [
       "prettier -w"
     ]
+  },
+  "concurrently": {
+    "names": {
+      "next": "next",
+      "prisma": "prisma"
+    }
   }
 }
