--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:next": "next dev",
     "dev:prisma": "prisma generate --watch",
     "migrate:dev": "dotenv -e .env.local prisma migrate dev",
-    "prisma:generate": "prisma generate && prettier --write src/lib/prisma/generated/zod/index.ts",
+    "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
     "build": "prisma generate && next build",
     "start": "next start",
@@ -37,6 +37,7 @@
     "dotenv-cli": "^7.4.2",
     "lucide-react": "^0.376.0",
     "next": "^14.2.7",
+    "next-safe-action": "^7.8.2",
     "prisma": "^5.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -47,8 +48,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
     "uvcanvas": "^0.2.1",
-    "zod": "^3.23.8",
-    "zod-prisma-types": "^3.1.8"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
