--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.376.0",
     "next": "^14.2.7",
     "next-safe-action": "^7.8.2",
+    "next-themes": "^0.3.0",
     "prisma": "^5.19.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
