--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next-safe-action": "^7.8.2",
     "next-themes": "^0.3.0",
     "prisma": "^5.19.0",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -63,6 +64,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.3",
+    "@types/qs": "^6.9.15",
     "@types/react": "^18.3.5",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
