--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.2",
     "lucide-react": "^0.376.0",
     "next": "^14.2.7",
@@ -45,6 +46,7 @@
     "prisma": "^5.19.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
