--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.36.3",
     "@clerk/nextjs": "^5.3.7",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.0",
+    "@internationalized/date": "^3.5.5",
     "@prisma/client": "^5.19.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -35,6 +37,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.9.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
