--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.9.0",
     "add": "^2.0.6",
@@ -42,6 +43,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv-cli": "^7.4.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.376.0",
     "next": "^14.2.7",
     "next-safe-action": "^7.8.2",
