--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.10.0",
@@ -53,6 +55,7 @@
     "prisma": "^5.19.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
