--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold\" npm:dev:*",
+    "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold\" npm:dev:*",
     "dev:next": "next dev",
     "dev:prisma": "prisma generate --watch",
+    "dev:storybook": "storybook dev -p 6006 --no-open",
     "migrate:dev": "dotenv -e .env.local prisma migrate dev",
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
@@ -20,7 +21,9 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.36.3",
@@ -39,6 +42,8 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-themes": "^8.2.9",
     "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.10.0",
@@ -55,11 +60,12 @@
     "prisma": "^5.19.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
-    "react-calendar": "^5.0.0",
+    "react-aria": "^3.34.3",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
+    "react-stately": "^3.32.2",
     "svix": "^1.31.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -69,8 +75,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/nextjs": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^6.5.0",
@@ -88,6 +103,7 @@
     "eslint-config-next": "^14.2.7",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "jest": "^29.7.0",
@@ -98,6 +114,7 @@
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
+    "storybook": "^8.2.9",
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
@@ -115,7 +132,13 @@
   "concurrently": {
     "names": {
       "next": "next",
-      "prisma": "prisma"
+      "prisma": "prisma",
+      "storybook": "storybook"
+    },
+    "prefixes": {
+      "next": "blue.bold",
+      "prisma": "magenta.bold",
+      "storybook": "green.bold"
     }
   }
 }
