--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ sitemap.xml
 sitemap-*.xml
 *storybook.log
 storybook-static/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
