--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold\" npm:dev:*",
     "dev:next": "next dev",
     "dev:prisma": "prisma generate --watch",
-    "dev:storybook": "storybook dev -p 6006 --no-open",
+    "dev:storybook": "storybook dev -p 6006 --no-open --quiet",
     "migrate:dev": "dotenv -e .env.local prisma migrate dev",
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
@@ -43,7 +43,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@storybook/addon-styling": "^1.3.7",
     "@storybook/addon-themes": "^8.2.9",
     "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^6.7.2",
