--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv-cli": "^7.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
