--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -1,15 +1,21 @@
-name: Create Branch from Issue
-
+name: "Run TODO to Issue"
 on:
   push:
-    branches:
-      - main
-
+  workflow_dispatch:
+    inputs:
+      MANUAL_COMMIT_REF:
+        description: "d00266c97e6c48682031a3064013d46fb1236e4e"
+        required: true
+      MANUAL_BASE_REF:
+        description: "c2623cccd7f36907be7a18d0db93e6d9389fdd3b"
+        required: false
 jobs:
-  create-todo-issues:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: "ubuntu-latest"
     steps:
-      - name: TODO to Issue
-        uses: alstr/todo-to-issue-action@v4.13.3
+      - uses: "actions/checkout@v3"
+      - name: "TODO to Issue"
+        uses: "alstr/todo-to-issue-action@master"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MANUAL_COMMIT_REF: ${{ inputs.MANUAL_COMMIT_REF }}
+          MANUAL_BASE_REF: ${{ inputs.MANUAL_BASE_REF }}
