--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,37 +11,37 @@ concurrency:
 
 jobs:
   lint:
-    name: ⬣ ESLint, ʦ TypeScript, 💅 Prettier, and 🃏 Test
+    name: ESLint, TypeScript, Prettier, and Test
     runs-on: ubuntu-latest
     steps:
-      - name: ⬇️ Checkout repo
+      - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: 🤌 Setup pnpm
+      - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
           version: 9.9.0
 
-      - name: ⎔ Setup node
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: 'pnpm'
 
-      - name: 📥 Download deps
+      - name: Download deps
         run: pnpm install --frozen-lockfile
 
-      - name: ⧗ Generate prisma client
+      - name: Generate prisma client
         run: pnpm prisma generate
 
-      - name: 🔬 Lint
+      - name: Lint
         run: pnpm run lint:strict
 
-      - name: 🔎 Type check
+      - name: Type check
         run: pnpm run typecheck
 
-      - name: 💅 Prettier check
+      - name: Prettier check
         run: pnpm run format:check
 
-      - name: 🃏 Run jest
+      - name: Run jest
         run: pnpm run test
