--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,7 @@ on:
     branches: [main]
 jobs:
   test:
+    name: Run Playwright tests
     timeout-minutes: 60
     runs-on: ubuntu-latest
     services:
