--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -19,3 +19,4 @@ jobs:
         env:
           MANUAL_COMMIT_REF: ${{ inputs.MANUAL_COMMIT_REF }}
           MANUAL_BASE_REF: ${{ inputs.MANUAL_BASE_REF }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
