--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: 'actions/checkout@v3'
       - name: 'TODO to Issue'
         uses: 'alstr/todo-to-issue-action@master'
-        env:
+        with:
           MANUAL_COMMIT_REF: ${{ inputs.MANUAL_COMMIT_REF }}
           MANUAL_BASE_REF: ${{ inputs.MANUAL_BASE_REF }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
