--- a/.github/workflows/todo.yml
+++ b/.github/workflows/todo.yml
@@ -1,23 +1,33 @@
-name: 'Run TODO to Issue'
+name: Create issues from TODOs
+
 on:
-  push:
   workflow_dispatch:
     inputs:
-      MANUAL_COMMIT_REF:
-        description: 'The commit ref to run the action on'
-        required: true
-      MANUAL_BASE_REF:
-        description: 'The base commit ref to run the action on'
+      importAll:
+        default: false
         required: false
+        type: boolean
+        description: Enable, if you want to import all TODOs. Runs on checked out branch! Only use if you're sure what you are doing.
+  push:
+    branches: # do not set multiple branches, todos might be added and then get referenced by themselves in case of a merge
+      - main
+      - master
+
+permissions:
+  issues: write
+  repository-projects: read
+  contents: read
+
 jobs:
-  build:
-    runs-on: 'ubuntu-latest'
+  todos:
+    runs-on: ubuntu-latest
+
     steps:
-      - uses: 'actions/checkout@v3'
-      - name: 'TODO to Issue'
-        uses: 'alstr/todo-to-issue-action@master'
-        env:
-          MANUAL_COMMIT_REF: ${{ inputs.MANUAL_COMMIT_REF }}
-          MANUAL_BASE_REF: ${{ inputs.MANUAL_BASE_REF }}
+      - uses: actions/checkout@v3
+
+      - name: Run Issue Bot
+        uses: juulsn/todo-issue@main
         with:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          excludePattern: '^(node_modules/)'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
