--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@react-google-maps/api": "^2.19.3",
     "@storybook/addon-themes": "^8.2.9",
     "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^6.7.2",
