ci: comment the html report

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -47,3 +47,24 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+      - name: Deploy report to GitHub Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: playwright-report
+          destination_dir: reports/${{ github.run_number }}
+
+      - name: Comment PR with report link
+        if: always() && github.event_name == 'pull_request'
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: `Playwright report for this PR: https://${context.repo.owner}.github.io/${context.repo.repo}/reports/${process.env.GITHUB_RUN_NUMBER}/`
+            })
