--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,12 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+  issues: write
+  pull-requests: write
 jobs:
   test:
     name: Run Playwright tests
