--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "make-your-own-listing-site",
+  "name": "apadana",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "predev": "src/scripts/start-local-db.sh && pnpm run migrate:dev",
-    "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold\" npm:dev:*",
+    "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold\" npm:dev:*",
     "dev:next": "next dev",
     "dev:prisma": "prisma generate --watch",
     "dev:storybook": "storybook dev -p 6006 --no-open --quiet",
+    "dev:smee": "node src/scripts/smee-client.js",
     "migrate:dev": "dotenv -e .env.local prisma migrate dev",
+    "drop-local-db": "src/scripts/delete-local-db-data.sh",
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
     "build": "prisma generate && next build",
@@ -69,6 +71,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
     "react-stately": "^3.32.2",
+    "smee-client": "^2.0.3",
     "svix": "^1.31.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
