--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^6.7.2",
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.0.12",
     "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
