--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:watch": "jest --watch",
     "test": "jest",
     "e2e": "playwright test --project=chromium",
+    "e2e:debug": "PLAYWRIGHT_DEBUG_DEV_SERVER=true playwright test --project=chromium --debug",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
@@ -101,6 +102,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
     "@types/qs": "^6.9.15",
@@ -110,6 +112,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.7",
     "eslint-config-prettier": "^8.10.0",
