--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Build
         run: pnpm run build
+        env:
+          NEXT_E2E_BUILD: 'true'
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
