--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "dotenv-cli": "^7.4.2",
+    "fetch-blob": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
     "next": "^14.2.7",
