--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
     "@chromatic-com/storybook": "^1.9.0",
     "@clerk/testing": "^1.2.21",
     "@commitlint/cli": "^16.3.0",
