--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -5,6 +5,11 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+permissions:
+  contents: read
+  actions: read
+  pages: write
+  id-token: write
 
 jobs:
   test:
@@ -50,18 +55,14 @@ jobs:
           POSTGRES_PASSWORD: postgres
           POSTGRES_DATABASE: postgres
 
-      - uses: actions/upload-artifact@v4
-        if: always()
+      - name: Upload Playwright Test Report
+        id: upload-results
+        uses: shallwefootball/s3-upload-action@master
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
-
-      - name: Upload test results to UploadThing
-        if: always()
-        env:
-          UPLOADTHING_SECRET: ${{ secrets.UPLOADTHING_SECRET }}
-        run: node src/scripts/upload-directory.js .next/__e2e__reports__
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: apadana-e2e
+          source_dir: .next/__e2e__reports__
 
       - name: Add a link to Playwright Test Report
         if: always()
@@ -70,6 +71,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           script: |
+            console.log('Uploaded Playwright Test Report to S3');
+            console.log(`URL: ${{ steps.upload-results.outputs.object_locations }}`);
             const url = `${{ steps.upload-results.outputs.url }}`;
             const { owner, repo } = context.repo;
             const head_sha = context.payload.pull_request.head.sha;
