--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -10,8 +10,8 @@ permissions:
   actions: read
   pages: write
   id-token: write
-  checks: write # Add this line
-  pull-requests: write # Add this line
+  checks: write
+  pull-requests: write
 
 jobs:
   test:
@@ -66,6 +66,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: apadana-e2e
           source_dir: .next/__e2e__reports__
+          destination_dir: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Add a link to Playwright Test Report
         if: always()
