--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,11 @@
-name: Playwright Tests
+name: E2E
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_run:
+    workflows: ['CI']
+    types:
+      - completed
+
 permissions:
   contents: read
   actions: read
@@ -16,11 +17,12 @@ permissions:
 jobs:
   test:
     name: Run Playwright tests
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     timeout-minutes: 60
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:15 # Vercel Postgres is version 15
+        image: postgres:15
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -36,10 +38,12 @@ jobs:
       - name: Install dependencies
         run: npm install -g pnpm && pnpm install
 
-      - name: Build
-        run: pnpm run build
-        env:
-          NEXT_E2E_BUILD: 'true'
+      - name: Download build artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: CI
+          name: build-output
+          path: .next
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
