--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -1,4 +1,4 @@
-name: Create issues from TODOs
+name: Automation
 
 on:
   workflow_dispatch:
@@ -7,11 +7,10 @@ on:
         default: false
         required: false
         type: boolean
-        description: Enable, if you want to import all TODOs. Runs on checked out branch! Only use if you're sure what you are doing.
+        description: Enable, if you want to import all TODOs again.
   push:
-    branches: # do not set multiple branches, todos might be added and then get referenced by themselves in case of a merge
+    branches:
       - main
-      - master
 
 permissions:
   issues: write
@@ -23,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Run Issue Bot
         uses: juulsn/todo-issue@main
