--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,6 +2,13 @@ name: Playwright Tests
 
 on:
   deployment_status:
+
+permissions:
+  contents: read
+  pull-requests: write
+  actions: read
+  checks: write
+
 jobs:
   run-e2es:
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
