--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
     "test:watch": "jest --watch",
     "test": "jest",
-    "e2e": "playwright test --project=chromium",
-    "e2e:debug": "PLAYWRIGHT_DEBUG_DEV_SERVER=true playwright test --project=chromium --debug",
+    "e2e": "PLAYWRIGHT_START_SERVER=true PORT=3030 playwright test --project=chromium",
+    "e2e:debug": "playwright test --project=chromium --debug",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
