--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:watch": "jest --watch",
     "test": "jest",
     "e2e": "PLAYWRIGHT_START_SERVER=true PORT=3030 playwright test --project=chromium",
+    "e2e:ci": "playwright test",
     "e2e:debug": "playwright test --project=chromium --debug",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
