ci: add CLERK_SECRET_KEY

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -24,6 +24,7 @@ jobs:
           BASE_URL: ${{ github.event.deployment_status.environment_url }}
           PLAYWRIGHT_START_SERVER: 'false'
           CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
+          CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
 
       - name: Upload Playwright Test Report
         id: upload-results
