--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,7 +19,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Install Playwright Browsers
-        run: pnpm exec playwright install
+        run: pnpm exec playwright install  --with-deps
 
       - name: Run tests
         run: pnpm run e2e:ci
@@ -46,9 +46,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            console.log('Uploaded Playwright Test Report to S3');
-            console.log(`URL: ${{ steps.upload-results.outputs.object_locations }}`);
-            const url = `${{ steps.upload-results.outputs.url }}`;
+            const url = `https://apadana-e2e.s3.amazonaws.com/${{ github.event.pull_request.head.sha || github.sha }}/index.html`;
             const { owner, repo } = context.repo;
             const head_sha = context.payload.pull_request ? context.payload.pull_request.head.sha : context.sha;
 
