--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -40,16 +40,17 @@ jobs:
           destination_dir: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Find Comment
-        uses: peter-evans/find-comment@v2
+        uses: peter-evans/find-comment@v3
         if: always()
         id: fc
+        continue-on-error: true
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
           body-includes: Playwright Test Report
 
       - name: Create or Update Comment
-        uses: peter-evans/create-or-update-comment@v3
+        uses: peter-evans/create-or-update-comment@v4
         if: always()
         with:
           issue-number: ${{ github.event.pull_request.number }}
