--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -40,22 +40,28 @@ jobs:
           destination_dir: ${{ github.event.pull_request.head.sha || github.sha }}
 
       - name: Find Comment
-        uses: peter-evans/find-comment@v3
         if: always()
+        uses: peter-evans/find-comment@v3
         id: fc
-        continue-on-error: true
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: 'github-actions[bot]'
           body-includes: Playwright Test Report
 
-      - name: Create or Update Comment
+      - name: Create comment
+        if: steps.fc.outputs.comment-id == ''
         uses: peter-evans/create-or-update-comment@v4
-        if: always()
         with:
-          comment-id: ${{ steps.fc.outputs.comment-id }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
             ## Playwright Test Report
             ✅ [View the Playwright test report](https://apadana-e2e.s3.amazonaws.com/${{ github.event.pull_request.head.sha || github.sha }}/index.html)
-          edit-mode: replace
+
+      - name: Update comment
+        if: steps.fc.outputs.comment-id != ''
+        uses: peter-evans/create-or-update-comment@v4
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          body: |
+            ## Playwright Test Report
+            ✅ [View the Playwright test report](https://apadana-e2e.s3.amazonaws.com/${{ github.event.pull_request.head.sha || github.sha }}/index.html)
