--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Run tests
         run: pnpm run e2e:ci
+        id: test-run
         env:
           BASE_URL: ${{ github.event.deployment_status.environment_url }}
           PLAYWRIGHT_START_SERVER: 'false'
@@ -44,12 +45,13 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { context } = require('@actions/github');
             const { issue_number } = context.payload.deployment.environment;
             const title = '## Playwright Test Report <!--e2e-report-->'
+            const testRunOutcome = ${{ steps.test-run.outcome }}
+            const emoji = testRunOutcome === 'success' ? '✅' : '❌'
             const commentBody = [
               title, 
-              '✅ [View the Playwright test report](https://apadana-e2e.s3.amazonaws.com/${{ github.event.pull_request.head.sha || github.sha }}/index.html)'
+              `${emoji} [View the Playwright test report](https://apadana-e2e.s3.amazonaws.com/${{ github.event.pull_request.head.sha || github.sha }}/index.html)`
             ].join('\n');
 
             const issueComment = await github.rest.issues.listComments({
